1、<dependencyManagement>就是用来管理版本的，引入之后就必须要指定版本了，跟<scope>import</scope>没有关系 2、运行一下 mvn dependency:purge-local-repository 就能成功引入springcloud 了

--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,6 @@
         <java.version>1.8</java.version>
     </properties>
 
-    <dependencyManagement>
         <dependencies>
             <!-- springCloud -->
             <dependency>
@@ -77,6 +76,7 @@
             <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
+                <version>1.18.28</version>
             </dependency>
 
             <dependency>
@@ -114,11 +114,4 @@
                 <version>1.1.23</version>
             </dependency>
         </dependencies>
-    </dependencyManagement>
-
-
-
-
-
-
 </project>
