--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -10,6 +10,10 @@
     <artifactId>user-service</artifactId>
     <name>Archetype - user-service</name>
 
+    <dependencies>
+
+    </dependencies>
+
     <!--    启动失败的原因就是因为在模块中没有配置spring-maven插件，父工程中配置这个没有用，模块中配置才有用-->
     <build>
         <plugins>
