--- a/user-service/src/main/resources/bootstrap.yml
+++ b/user-service/src/main/resources/bootstrap.yml
@@ -2,18 +2,19 @@ spring:
   application:
     #应用的名称 启动失败与在这个地方是否配置服务名称无关
     name: user-service
+  profiles:
+    active: dev
   cloud:
     nacos:
+      # Nacos 服务器地址
+      server-addr: 127.0.0.1:8848
       config:
-        # Nacos 服务器地址
-        server-addr: 127.0.0.1:8848
         # 应用程序的命名空间
-        #namespace: 3e5d4c55-****-****-****-************
+        namespace: c44ea5b1-5a7a-4ec6-bf02-fbee39d29856
         # 配置文件的数据 ID
-        data-id:
+        file-extension: yaml # 配置文件扩展名，可选配置
 
-
-
+#在指定的命名空间中（没配置就是pulic)中寻找名称为  {”order-service“ +  "-dev" (可有可无）  +   “yaml" }  的文档。
 
 
 
