汇总一下nacos配置的逻辑

--- a/order-service/src/main/resources/bootstrap.yml
+++ b/order-service/src/main/resources/bootstrap.yml
@@ -3,25 +3,27 @@ spring:
     #应用的名称 启动失败与在这个地方是否配置服务名称无关
     name: order-service
   profiles:
-    active: dev
+    active: test
   cloud:
     nacos:
       # Nacos 服务器地址
       server-addr: 127.0.0.1:8848
-      # 应用程序的命名空间 ,如果放在了config下边，那么就只能读取dev空间的配置，而无法将服务启动到命名空间，只有放在这个位置，才能启动到dev空间
-     #namespace: c44ea5b1-5a7a-4ec6-bf02-fbee39d29856
       config:
         #试一下热更新能生效不，不能生效，球用没有
         enabled: true
-        # 应用程序的命名空间，放在了config下边，那么就只能读取dev空间的配置，
-        namespace: c44ea5b1-5a7a-4ec6-bf02-fbee39d29856
+        # 应用程序的命名空间，放在了config下边，那么就只能读取dev空间的配置，如果放在config的上方，是无法读取dev环境的配置的，如果不配置这个
+        #值,那么读取的是public空间的配置，这个配置并没有办法将服务启动到dev环境，开启与否只是限制读取了哪一个环境的nacos线上的配置
+        #namespace: c44ea5b1-5a7a-4ec6-bf02-fbee39d29856
         # 配置文件的数据 ID
         file-extension: yaml # 配置文件扩展名，可选配置
 
-#在指定命名空间的情况下
-#在指定的命名空间中（没配置就是public)中寻找名称为  {”order-service“ +  "-dev" (不带后缀-dev的文档也能被加载）  +   “yaml" }  的文档。
+#在指定命名空间的情况下（开启namespace，没配置就是public)
+#在指定的命名空间中dev环境中寻找名称为  {”order-service“ +  "-dev" (不带后缀-dev的文档也能被加载）  +   “yaml" }  的文档。
+#但是其它环境包括public环境下的order-service文档无法被读取
 
-#
+#在不指定命名空间的情况下，不开启namespace，就是public环境下
+#在public环境下寻找{”order-service“ +  "-dev" (不带后缀-dev的文档也能被加载）  +   “yaml" }  的文档。
+#但是无法加载-test、-prod等其它结尾的配置文档
 
 
 
