使用feign完成跨服务调用实例

--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -36,6 +36,11 @@ mybatis-plus:
   global-config:
     db-config:
       id-type: ASSIGN_ID
+feign:
+  client:
+    config:
+      default:
+        logger-level: full
 
 
 
