--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,10 @@
     </dependencyManagement>
 
         <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-openfeign</artifactId>
+            </dependency>
 
             <dependency>
                 <groupId>org.springframework.boot</groupId>
