优化feign为httpclient，就是引入了httpclient的依赖，然后再feign中显示的配置一下就行了，httpclient就相当于druid连接池，可以提高feign的效率

--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -37,10 +37,12 @@ mybatis-plus:
     db-config:
       id-type: ASSIGN_ID
 feign:
-  client:
-    config:
-      default:
-        logger-level: full
+  httpclient:
+    enabled: true #支持httpclient的开关
+#  client:
+#    config:
+#      default:
+#        logger-level: full #有空了再研究为啥球用没有了吧
 
 
 
