--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 
         <module>order-service</module>
         <module>user-service</module>
+        <module>feign-api</module>
     </modules>
 
     <properties>
