--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>order-service</module>
         <module>user-service</module>
         <module>feign-api</module>
+        <module>getway</module>
     </modules>
 
     <properties>
@@ -48,6 +49,14 @@
     </dependencyManagement>
 
         <dependencies>
+            <dependency>
+                <groupId>com.alibaba.cloud</groupId>
+                <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba.cloud</groupId>
+                <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+            </dependency>
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-starter-openfeign</artifactId>
