--- a/getway/src/main/resources/application.yml
+++ b/getway/src/main/resources/application.yml
@@ -6,21 +6,17 @@ server:
 #  pattern:
 #    dateformat: MM-dd HH:mm:ss:SSS
 spring:
-#  application:
-#    name: getway
-#  cloud:
-#    nacos:
-#      server-addr: localhost:80 # Nacos 配置中心的地址
-  gateway:
-    routes:
-      - id: GoUserService #规则id
-        uri: lb://user-service #负载均衡到user-service服务上
-        predicates:
-          - Path=/tb-user/** #端口号后边是不是以tb-user开头，是的换就负载均衡到user-service服务上
-      - id: GoOrderService
-        uri: lb://order-service
-        predicates:
-          - Path=/tb-order/** #端口号后边是不是以tb-user开头，是的换就负载均衡到user-service服务上
+  cloud:
+    gateway:
+      routes:
+        - id: GoUserService #规则id
+          uri: lb://user-service #负载均衡到user-service服务上
+          predicates:
+            - Path=/tb-user/** #端口号后边是不是以tb-user开头，是的换就负载均衡到user-service服务上
+        - id: GoOrderService
+          uri: lb://order-service
+          predicates:
+            - Path=/tb-order/** #端口号后边是不是以tb-user开头，是的换就负载均衡到user-service服务上
   datasource:
     druid:
       driver-class-name: com.mysql.cj.jdbc.Driver
