--- a/mqconsumer/src/main/resources/application.yml
+++ b/mqconsumer/src/main/resources/application.yml
@@ -1,3 +1,6 @@
+logging:
+  pattern:
+    dateformat: MM-dd HH:mm:ss:SSS
 spring:
   rabbitmq:
     host: 192.168.46.132
@@ -8,5 +11,15 @@ spring:
     listener:
       simple:
         prefetch: 1  #设置所有的消费者每次都只能取一条数据，完成任务之后，再来取，可以实现能者多劳的效果
+#spring:
+#  rabbitmq:
+#    host: 192.168.46.132
+#    port: 5672
+#    username: itcast
+#    password: 123321
+#    virtual-host: /
+#    listener:
+#      simple:
+#        prefetch: 1  #设置所有的消费者每次都只能取一条数据，完成任务之后，再来取，可以实现能者多劳的效果
 server:
   port: 8085
