--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,10 @@
     </dependencyManagement>
 
         <dependencies>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+            </dependency>
 
             <dependency>
                 <groupId>com.alibaba</groupId>
