--- a/getway/src/main/resources/bootstrap.yml
+++ b/getway/src/main/resources/bootstrap.yml
@@ -1,6 +1,5 @@
 spring:
   application:
     name: getway
-  cloud:
-    nacos:
-      server-addr: localhost:80 # Nacos 配置中心的地址
+  profiles:
+    active: dev
