没有注册到nacos上的原因可能是引入错依赖了

--- a/getway/src/main/resources/application.yml
+++ b/getway/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
         - id: GoOrderService
           uri: lb://order-service
           predicates:
-            - Path=/tb-order/** #端口号后边是不是以tb-user开头，是的换就负载均衡到user-service服务上
+            - Path=/tb-order/** #端口号后边是不是以tb-user开头，是的换就负载均衡到order-service服务上
       default-filters:
         - AddRequestHeader=li,xiaoliniubai!
       globalcors: # 全局的跨域处理
