已经可以通过打包生产环境正常部署微服务了，spring.application.name 与 docker-compose的 services.xxx不必一致，一个是注册到nacos上的服务名称，另一个是docker-compose的操作名称 不是一回事

--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -46,6 +46,7 @@
 
     <!--    启动失败的原因就是因为在模块中没有配置spring-maven插件，父工程中配置这个没有用，模块中配置才有用-->
     <build>
+        <finalName>app</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
