--- a/getway/pom.xml
+++ b/getway/pom.xml
@@ -28,6 +28,7 @@
     </dependencies>
 
     <build>
+        <finalName>app</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
