引入spring-cloud-starter-alibaba-sentinel，hibernate-validator，可以正常监控链路模式

--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -11,6 +11,17 @@
     <name>Archetype - user-service</name>
 
     <dependencies>
+        <!--sentinel-->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>com.ldy</groupId>
             <artifactId>feign-api</artifactId>
