添加仓库模块

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>getway</module>
         <module>mqproducer</module>
         <module>mqconsumer</module>
+        <module>storage-service</module>
     </modules>
 
     <properties>
