--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,11 @@
                 <artifactId>spring-boot-starter</artifactId>
             </dependency>
 
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+            </dependency>
+
 
 
             <dependency>
