--- a/user-service/src/main/resources/application-dev.yml
+++ b/user-service/src/main/resources/application-dev.yml
@@ -17,4 +17,4 @@ seata:
   service:
     vgroup-mapping: # 事务组与TC服务cluster的映射关系
       seata-demo: BJ
-  data-source-proxy-mode: XA
+  data-source-proxy-mode: AT
