--- a/mqconsumer/pom.xml
+++ b/mqconsumer/pom.xml
@@ -10,6 +10,11 @@
     <artifactId>mqconsumer</artifactId>
     <name>Archetype - mqconsumer</name>
     <dependencies>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-amqp</artifactId>
