完成简单spring-quartz任务的实现

--- a/other/pom.xml
+++ b/other/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>other</artifactId>
     <packaging>pom</packaging>
     <modules>
-        <module>quartzshow</module>
+        <module>springquarz</module>
     </modules>
 
     <properties>
@@ -20,5 +20,9 @@
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <dependencies>
+
+    </dependencies>
 
 </project>
