完成简单springboot-quartz注解定时任务的实现

--- a/other/pom.xml
+++ b/other/pom.xml
@@ -13,6 +13,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>springquarz</module>
+        <module>springbootquartz</module>
     </modules>
 
     <properties>
