dubbo模拟提供方的代码目前来看好像没有问题了，同时完善了一下orderservice的yml配置文档

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,8 @@
         <module>mqconsumer</module>
         <module>storage-service</module>
         <module>other</module>
+        <module>dubbodemo</module>
+        <module>dubbodemo/dubbouser</module>
     </modules>
 
     <properties>
