--- a/dubbodemo/dubboapi/pom.xml
+++ b/dubbodemo/dubboapi/pom.xml
@@ -11,6 +11,7 @@
 
     <groupId>org.dubboapi.ldy</groupId>
     <artifactId>dubboapi</artifactId>
+    <version>1.0</version>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
