--- a/dubbodemo/dubboorder/pom.xml
+++ b/dubbodemo/dubboorder/pom.xml
@@ -23,7 +23,7 @@
         <dependency>
             <groupId>org.dubboapi.ldy</groupId>
             <artifactId>dubboapi</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0</version>
         </dependency>
 
         <!--        <dependency>-->
