--- a/other/springbootquartz/pom.xml
+++ b/other/springbootquartz/pom.xml
@@ -20,7 +20,11 @@
 
     <dependencies>
 
-        
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-quartz</artifactId>
+        </dependency>
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
