新建纯注解定时模块，简单实现了一个定时功能

--- a/other/pom.xml
+++ b/other/pom.xml
@@ -15,6 +15,7 @@
         <module>springquarz</module>
         <module>springbootquartz</module>
         <module>xxljob</module>
+        <module>springbootQuartzAnnotation</module>
     </modules>
 
     <properties>
