添加spring-batch包并修改dubbo的请求路径

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <module>other</module>
         <module>dubbodemo</module>
         <module>dubbodemo/dubbouser</module>
+        <module>springbatch</module>
     </modules>
 
     <properties>
